--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <footer>
     <section class="left">
         <ul>
-            <li> <a href="#">Linkedin</a></li>
+            <li> <a href="https://www.linkedin.com/in/yhonny-silva-sifontes-190106119/">Linkedin</a></li>
             <li> <a href="#">Crunbache</a></li>
             <li> <a href="#">Hackernews</a></li>
         </ul>
